--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,41 @@
 {
-    "name": "xtreamwayz/expressive-composer-installer",
+    "name": "xtreamwayz/mezzio-composer-installer",
     "type": "project",
-    "homepage": "https://github.com/xtreamwayz/expressive-composer-installer",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Geert Eltink",
-            "homepage": "https://xtreamwayz.github.io/"
-        }
-    ],
+    "license": "BSD-3-Clause",
+    "homepage": "https://mezzio.dev",
+    "support": {
+        "docs": "https://docs.mezzio.dev/mezzio-skeleton/",
+        "issues": "https://github.com/mezzio/mezzio-skeleton/issues",
+        "source": "https://github.com/mezzio/mezzio-skeleton",
+        "rss": "https://github.com/mezzio/mezzio-skeleton/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "require": {
-        "roave/security-advisories": "dev-master",
-        "zendframework/zend-expressive": "~0.2",
-        "zendframework/zend-config": "~2.5"
+        "laminas/laminas-config": "~2.5",
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio": "~0.2",
+        "roave/security-advisories": "dev-master"
     },
     "require-dev": {
         "composer/composer": "1.0.0-alpha10",
+        "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "~2.3"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/App/",
-            "Zend\\": "src/Zend/"
+            "Laminas\\": "src/Laminas/"
         }
     },
     "scripts": {
-        "pre-install-cmd": "Zend\\Expressive\\Composer\\OptionalPackages::install",
-        "pre-update-cmd": "Zend\\Expressive\\Composer\\OptionalPackages::install"
+        "pre-install-cmd": "Mezzio\\Composer\\OptionalPackages::install",
+        "pre-update-cmd": "Mezzio\\Composer\\OptionalPackages::install"
+    },
+    "replace": {
+        "xtreamwayz/expressive-composer-installer": "self.version"
     }
 }
