--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,28 @@
 {
-    "name": "zendframework/zend-expressive-skeleton",
+    "name": "mezzio/mezzio-skeleton",
     "type": "project",
-    "homepage": "https://github.com/zendframework/zend-expressive-skeleton",
-    "license": "BSD-3-CLAUSE",
-    "authors": [
-        {
-            "name": "Geert Eltink",
-            "homepage": "https://xtreamwayz.github.io/"
-        }
-    ],
+    "license": "BSD-3-Clause",
+    "homepage": "https://mezzio.dev",
+    "support": {
+        "docs": "https://docs.mezzio.dev/mezzio-skeleton/",
+        "issues": "https://github.com/mezzio/mezzio-skeleton/issues",
+        "source": "https://github.com/mezzio/mezzio-skeleton",
+        "rss": "https://github.com/mezzio/mezzio-skeleton/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "require": {
-        "roave/security-advisories": "dev-master",
-        "zendframework/zend-expressive": "^0.3"
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio": "^0.3",
+        "roave/security-advisories": "dev-master"
     },
     "require-dev": {
         "composer/composer": ">=1.0.0-alpha10",
         "phpunit/phpunit": "^4.8",
+        "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
@@ -35,5 +42,8 @@
             "php vendor/squizlabs/php_codesniffer/scripts/phpcs",
             "php vendor/phpunit/phpunit/phpunit"
         ]
+    },
+    "replace": {
+        "zendframework/zend-expressive-skeleton": "self.version"
     }
 }
